Fixed width and alignment issues for buttons in sections

--- a/src/scss/empire/_base/_button.scss
+++ b/src/scss/empire/_base/_button.scss
@@ -6,5 +6,12 @@
 //   ========================================================
 
 
-// * @section    Button styles  
+// * @section    Button styles
 // * --------------------------------------------------------
+
+
+// * @section    Button containers
+// * --------------------------------------------------------
+section .emp-button-group {
+    display: table;
+}
